# no-coder

./: .gitignore  Dockerfile.dev  docker-compose.dev.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  application.py  home.py
app/login/: routes.py
app/public/: public.py
app/public/files/: app.css
app/scripts/: dev.py  secret.py
